# demo_project

./: Dockerfile  README.md  pyproject.toml
demo/: main.py  sample2.txt
pbp/: Jenkinsfile
src/demo/: main.py  sample1.txt
src/simple_demo_project/: main.py
src/simple_demo_project.egg-info/: PKG-INFO  SOURCES.txt
