[project]
name = "simple_demo_project"
version = "0.0.0"
description = "A simple project that reads the sample texts and prints it out"
authors = [
    { name = "sigma", email = "you@example.com" }
]
requires-python = ">=3.10"

dependencies = [
    "black (>=26.1.0,<27.0.0)"
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
]

[project.scripts]
demo="demo.main:main()"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
