[tool.poetry]
name = "simple-demo-project"
version = "0.0.0"
description = "A simple project that reads the sample texts and prints it out"
authors = ["sigma <you@example.com>"]

packages = [
  { include = "simple_demo_project", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.group.dev.dependencies]
black = ">=26.1.0,<27.0.0"
ruff = "*"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"